--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,8 @@ fastapi==0.110.1
 uvicorn[standard]==0.29.0
 
 # === Validação e Configuração ===
-pydantic==2.7.1
-pydantic-settings==2.2.1
+pydantic>=2.7.1
+pydantic-settings>=2.2.1
 python-dotenv==1.0.1
 python-multipart==0.0.9
 
