--- a/requirements.txt
+++ b/requirements.txt
@@ -24,4 +24,4 @@ httpx==0.27.0
 aiofiles==23.2.1
 
 # === IA — OpenAI (GPT-4o para copy/análise, DALL-E 3 para imagens) ===
-openai==1.30.5
+openai>=1.50.0
